--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidAssignmentTwo</string>
+    <string name="start_game">Start Game</string>
+    <string name="welcome_to_number_guess">Welcome to Number Guess!</string>
 </resources>
